--- a/client/cookhow/src/components/Nav.css
+++ b/client/cookhow/src/components/Nav.css
@@ -17,11 +17,11 @@
   gap: 10px;
 }
 
-.logo-text {
+/* .logo-text {
   font-family: 'Oregano', sans-serif;
   font-size: 40px;
   color: #604461;
-}
+} */
 
 .navbar-links {
   display: flex;
